--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "aesthetic-css": "^1.0.1",
+    "axios": "^1.7.5",
     "ionicons": "^7.0.0",
+    "pinia": "^2.2.2",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
