--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.5",
     "ionicons": "^7.0.0",
     "pinia": "^2.2.2",
+    "screenfull": "^6.0.2",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
