--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pinia": "^2.2.2",
     "screenfull": "^6.0.2",
     "vue": "^3.3.0",
+    "vue-retro-grid": "^1.0.1",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
