--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.5",
     "ionicons": "^7.0.0",
     "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^4.0.2",
     "screenfull": "^6.0.2",
     "vue": "^3.3.0",
     "vue-retro-grid": "^1.0.1",
